ex3 button overflow corrected

--- a/m2/character-creator/src/components/ControlPane/ControlPane.module.css
+++ b/m2/character-creator/src/components/ControlPane/ControlPane.module.css
@@ -11,7 +11,6 @@
   */
   margin-bottom: 32px;
   white-space: nowrap;
-  overflow-x:scroll;
 }
 
 .title {
